camera & scene setup

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     </style>
   </head>
   <body>
+
+    <body>
+        <canvas id="c"></canvas>
+    </body>
+
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
