display model white

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <title>My first three.js app</title>
     <style>
       body { margin: 0; }
+
+      #c {
+        width: 1200px;
+        height: 900px;
+        }
+
     </style>
   </head>
   <body>
