Light angle slider

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
                     <input type="range" id="lightZ" min="-5" max="50" value="20">
                 </div>
 
+          
+
+                <div class="control-group">
+                    <label>light-angle: <span class="value-display" id="lightAngleValue">35</span></label>
+                    <input type="range" id="lightAngle" min="0" max="90" value="35">
+                </div>
+
 
                 <canvas id="c"></canvas>
          
