view change buttons

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                     <input type="range" id="lightAngle" min="0" max="90" value="35">
                 </div>
 
+                <button class="control-btn" id="topView">Top View</button>
+                <button class="control-btn" id="frontView">Front View</button>
+             
 
                 <canvas id="c"></canvas>
          
