feat:toggle night day

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 
                 <button class="control-btn" id="topView">Top View</button>
                 <button class="control-btn" id="frontView">Front View</button>
+                 
+                <button id="toggleDayNight">Switch to Night</button>
              
 
                 <canvas id="c"></canvas>
