feat:open back door

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
       <div class="d-grid gap-2">
         <button class="btn btn-primary" id="openFrontDoor">Open Front Door</button>
+        <button class="btn btn-primary" id="openBackDoor">Open Back Door</button>
         <button class="btn btn-primary" id="topView">Top View</button>
         <button class="btn btn-secondary" id="frontView">Front View</button>
         <button class="btn btn-warning" id="toggleDayNight">Switch to Night</button>
