--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <button class="btn btn-primary" id="openBackDoor">Open Back Door</button>
         <button class="btn btn-primary" id="topView">Top View</button>
         <button class="btn btn-secondary" id="frontView">Front View</button>
+        <button class="btn btn-secondary" id="backView">Back View</button>
         <button class="btn btn-warning" id="toggleDayNight">Switch to Night</button>
       </div>
     </div>
