--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
       <div class="d-grid gap-2">
         <button class="btn btn-primary" id="openFrontDoor">Open Front Door</button>
+        <button class="btn btn-primary" id="openInnerDoor">Open Inner Door</button>
         <button class="btn btn-primary" id="openBackDoor">Open Back Door</button>
         <button class="btn btn-primary" id="topView">Top View</button>
         <button class="btn btn-secondary" id="frontView">Front View</button>
@@ -63,6 +64,8 @@
         <button class="btn btn-warning" id="toggleDayNight">Switch to Night</button>
 
         <button class="btn btn-warning" id="animateSceen">Animate</button>
+
+        <button class="btn btn-warning" id="walkthorw">House Tour</button>
       </div>
     </div>
     
