feat:add rain & sound

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         <button class="btn btn-primary" id="topView">Top View</button>
         <button class="btn btn-secondary" id="frontView">Front View</button>
         <button class="btn btn-secondary" id="backView">Back View</button>
+
+        <button class="btn btn-secondary" id="rainIt">Start Rain</button>
         <button class="btn btn-warning" id="toggleDayNight">Switch to Night</button>
 
         <button class="btn btn-warning" id="animateSceen">Animate</button>
