feat:add thunderstores & sound

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <button class="btn btn-secondary" id="backView">Back View</button>
 
         <button class="btn btn-secondary" id="rainIt">Start Rain</button>
+        <button class="btn btn-secondary" id="startThunderstorm">Start Thunderstorm</button>
         <button class="btn btn-warning" id="toggleDayNight">Switch to Night</button>
 
         <button class="btn btn-warning" id="animateSceen">Animate</button>
